--- a/cw1/style.css
+++ b/cw1/style.css
@@ -1,22 +1,38 @@
 *{
-    border: 2px dashed red;
+    border: 1px  white;
 }
 .main2 {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     height: 300px;
 }
 
 footer {
-    display: flex;
+    /* display: flex;
     align-items: flex-end;
-    justify-content: right;
+    justify-content: right; */
+    margin-top: 4rem;
+    text-align: right;
 }
 
 .rightArr, .lefftArr {
 
-    display: block;
-    width: 20px;
-    height: 20px; 
-    border: 1px black;
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;  */
+     padding: 1rem;  /*    dobre */
+    background-color: blue;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.content {
+    width: 300px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
