--- a/cw1/style.css
+++ b/cw1/style.css
@@ -1,6 +1,6 @@
-*{
+/* *{
     border: 1px  white;
-}
+} */
 .main2 {
     display: flex;
     justify-content: space-between;
@@ -30,9 +30,20 @@ footer {
 }
 
 .content {
-    width: 300px;
-    height: 200px;
+    /* width: 300px;
+    height: 200px; */
     display: flex;
     justify-content: center;
     align-items: center;
+}
+h1, h2 {
+    text-align: center;
+}
+.rightArr:hover, .lefftArr:hover {
+    color: red;
+
+}
+img:hover {
+    border: 2px solid black;
+    cursor: pointer;
 }
